# tres-dias-backend

./: README.md  docker-compose.yaml  pyproject.toml
management_portal/: Dockerfile  manage.py
management_portal/apps/adminapp/: admin.py  apps.py  filters.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
management_portal/apps/adminapp/migrations/: 0001_initial.py  0002_alter_admincommentattachment_options_and_more.py  0003_auditlog_action_auditlog_section.py  0004_alter_auditlog_payload.py  0005_auditlog_adminapp_au_departm_37c24d_idx_and_more.py  0006_alter_admindepartmentcomment_author_role.py
management_portal/apps/core/: models.py
management_portal/apps/core/middleware/: logging.py
management_portal/apps/core/tests/: tests.py
management_portal/apps/department/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
management_portal/apps/department/migrations/: 0001_initial.py  0002_initial.py  0002_remove_departmentcommentattachment_comment_and_more.py  0003_alter_departmentmember_role.py  0003_remove_departmentsection_unique_section_type_per_department_and_more.py
management_portal/apps/sections/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
management_portal/apps/users/: admin.py  models.py  permissions.py  urls.py
management_portal/department/: admin.py  models.py
management_portal/department/migrations/: 0001_initial.py
management_portal/management_portal/: asgi.py  settings.py  urls.py  wsgi.py
management_portal/users/: models.py
(+13 files in other folders)
