[project]
name = "department-portal"
version = "0.1.0"
description = ""
authors = [
    {name = "molumolu",email = "kan.pavel@ilcoud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "boto3 (>=1.40.60,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"